# fastapi-practice

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: deps.py  main.py  utils.py
app/api/v1/: main.py
app/api/v1/endpoints/: auth.py  user.py
app/config/: db.py  secrets.py
app/crud/: user.py
app/models/: __init__.py  user.py
app/schemas/: user.py
migration/: env.py
migration/versions/: 043a90a3cd73_adding_user_table.py  60fc52ae4762_making_email_unique.py  c24d508754c1_adding_password_hashed.py  d7d17ba55ec4_removing_date_of_birth_from_user_table.py
